@@ -14,7 +14,7 @@
 <div id="test-nested-hidden-visible" style="display:none;">
   <div id="test-nestee-hidden-visible">hidden</div>
 </div>
-<div id="test-hidden-by-size" style="width:0px;"></div>
+<div id="test-hidden-by-size" style="width:0px;height:0px;"></div>
 <div id="removable-container"><div id="removable"></div></div>
 
 <div>
